@@ -1,7 +1,7 @@
 === Ubuntu ===
 
 1. Install build dependecies
-	sudo apt-get install build-essential libqtgstreamer-dev libgstreamer-plugins-base0.10-dev libdcmtk2-dev libwrap0-dev libssl-dev
+        sudo apt-get install build-essential libqtgstreamer-dev libgstreamer-plugins-base0.10-dev libdcmtk2-dev libwrap0-dev libssl-dev libmediainfo-dev
 
 2. Make Makefile:
 	qmake CONFIG+=dicom beryllium.pro
@@ -16,7 +16,7 @@
         sudo zypper addrepo http://download.opensuse.org/repositories/multimedia:/libs/openSUSE_12.3/ opensuse-multimedia-libs
         sudo zypper addrepo -f -n packman http://packman.inode.at/suse/openSUSE_12.3 packman
 
-        sudo zypper install make rpm-build qt-devel qt-gstreamer-devel libQtGlib-devel dcmtk-devel tcp_wrappers-devel openssl-devel
+        sudo zypper install make rpm-build qt-devel qt-gstreamer-devel libQtGlib-devel dcmtk-devel tcp_wrappers-devel openssl-devel mediainfo-devel
 
 2. Make Makefile:
 	qmake-qt4 CONFIG+=dicom beryllium.pro
